#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2014-12-01
      # The "Options" menu now has setting that allows clients to be notified
        via pop-up if an AIV post has been lodged (T#018; T#046).
      # Null diffs should no longer be displayed (T#038). This was a bug
        introduced when STiki enabled custom color options for users.
      # Users will not be displayed their own edits from the queues, as this
        is a conflict of interest (T#043).
      # More AGF messages were added, including some pulled in from a GitHub
        merge (our first community code contribution!). Some category
        labels were pre-pended to help better manage this growing list.
        The code copy was also synced with community copy at:
        [http://en.wikipedia.org/wiki/WP:STiki/Good-faith-revert_messages]
      # Metadata panel content now has "mouseover" support. In particular,
        this should permit the full display of comments which are truncated
        because they are too lengthy to fit in the fixed-size placeholder.
      # A "small numerical edits" filter has been created. Sometimes
        monotonous and difficult to casually assess, this filter can allow
        users to skip edits where "only a single numerical value is changed,
        and the magnitude of that change is (0.5 < change < 2.0)" (T#049).
      # Additional watchlisting options (reverts/warns/both/prefences/never), 
        are now accessible via a ndrop-down menu in the login panel(T#042). 
      # Additional user/article-talk links added to metadata panel (T#036).
      # Remove reference to "editing anonymously" in login dialog (T#044).  