@@ -12,6 +12,12 @@
   formal version number (e.g., 2.1) is in too many places to be 
   conveniently altered for small changes:
   
+  * 2014-12-12
+      # Something seems to have changed with the way Mediawiki parses 
+        new line instructions, causing section headers to not be displayed, 
+        and causing warnings to run together. STiki has changed line breaks 
+        on talk pages messages from "/r" (carriage return) to "/n" (newline).
+  
   * 2014-12-01
       # The "Options" menu now has setting that allows clients to be notified
         via pop-up if an AIV post has been lodged (T#018; T#046).
